infra/aws-cdk-openclaw/cdk.out/openclaw-dev-network.template.json
{
 "Resources": {
  "NetworkVpc7FB7348F": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.42.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/Resource"
   }
  },
  "NetworkVpcpublicSubnet1Subnet00617657": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.42.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet1/Subnet"
   }
  },
  "NetworkVpcpublicSubnet1RouteTableDFE49ED6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet1/RouteTable"
   }
  },
  "NetworkVpcpublicSubnet1RouteTableAssociation203B743E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcpublicSubnet1RouteTableDFE49ED6"
    },
    "SubnetId": {
     "Ref": "NetworkVpcpublicSubnet1Subnet00617657"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "NetworkVpcpublicSubnet1DefaultRoute19622567": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NetworkVpcIGW6BEA7B02"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcpublicSubnet1RouteTableDFE49ED6"
    }
   },
   "DependsOn": [
    "NetworkVpcVPCGW8F3799B5"
   ],
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "NetworkVpcpublicSubnet1EIPC41EF705": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet1/EIP"
   }
  },
  "NetworkVpcpublicSubnet1NATGateway939C8F7E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NetworkVpcpublicSubnet1EIPC41EF705",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NetworkVpcpublicSubnet1Subnet00617657"
    },
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "NetworkVpcpublicSubnet1DefaultRoute19622567",
    "NetworkVpcpublicSubnet1RouteTableAssociation203B743E"
   ],
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet1/NATGateway"
   }
  },
  "NetworkVpcpublicSubnet2SubnetDCAA7C9A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.42.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet2/Subnet"
   }
  },
  "NetworkVpcpublicSubnet2RouteTable216E89B0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet2/RouteTable"
   }
  },
  "NetworkVpcpublicSubnet2RouteTableAssociationA4B52C34": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcpublicSubnet2RouteTable216E89B0"
    },
    "SubnetId": {
     "Ref": "NetworkVpcpublicSubnet2SubnetDCAA7C9A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "NetworkVpcpublicSubnet2DefaultRouteF6C22611": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NetworkVpcIGW6BEA7B02"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcpublicSubnet2RouteTable216E89B0"
    }
   },
   "DependsOn": [
    "NetworkVpcVPCGW8F3799B5"
   ],
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "NetworkVpcprivateegressSubnet1SubnetF93B96A6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.42.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-egress"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/private-egressSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/private-egressSubnet1/Subnet"
   }
  },
  "NetworkVpcprivateegressSubnet1RouteTable3C912BBF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/private-egressSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/private-egressSubnet1/RouteTable"
   }
  },
  "NetworkVpcprivateegressSubnet1RouteTableAssociation20CBF3B5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcprivateegressSubnet1RouteTable3C912BBF"
    },
    "SubnetId": {
     "Ref": "NetworkVpcprivateegressSubnet1SubnetF93B96A6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/private-egressSubnet1/RouteTableAssociation"
   }
  },
  "NetworkVpcprivateegressSubnet1DefaultRoute5EA52C4E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NetworkVpcpublicSubnet1NATGateway939C8F7E"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcprivateegressSubnet1RouteTable3C912BBF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/private-egressSubnet1/DefaultRoute"
   }
  },
  "NetworkVpcprivateegressSubnet2SubnetD8577098": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.42.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-egress"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/private-egressSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/private-egressSubnet2/Subnet"
   }
  },
  "NetworkVpcprivateegressSubnet2RouteTable2F24F101": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc/private-egressSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/private-egressSubnet2/RouteTable"
   }
  },
  "NetworkVpcprivateegressSubnet2RouteTableAssociation8B859F88": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcprivateegressSubnet2RouteTable2F24F101"
    },
    "SubnetId": {
     "Ref": "NetworkVpcprivateegressSubnet2SubnetD8577098"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/private-egressSubnet2/RouteTableAssociation"
   }
  },
  "NetworkVpcprivateegressSubnet2DefaultRoute10A7BCF8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NetworkVpcpublicSubnet1NATGateway939C8F7E"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcprivateegressSubnet2RouteTable2F24F101"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/private-egressSubnet2/DefaultRoute"
   }
  },
  "NetworkVpcIGW6BEA7B02": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     },
     {
      "Key": "Name",
      "Value": "openclaw-dev-network/Network/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/IGW"
   }
  },
  "NetworkVpcVPCGW8F3799B5": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "NetworkVpcIGW6BEA7B02"
    },
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/Vpc/VPCGW"
   }
  },
  "NetworkServiceSecurityGroup61AA808E": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for the private OpenClaw ECS service.",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Application",
      "Value": "openclaw"
     },
     {
      "Key": "ManagedBy",
      "Value": "aws-cdk"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/Network/ServiceSecurityGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/02OwQrCMBBEv8V7GmvwB0Sk9CKllV5lu664tU0k2bSI+O9SFetpZh7DMEab9UqnCxhDgqdr0nGjH5UAXhWM4Uho9KO+odqebV1sVRGbjrGKjSWZ2OxKF4UO0HQ085ltQnDIIOzsrzyZXV5MsgfJQGiEuyo8DyA0D+dWyFv6FT5PvmkjAnjpyYqqCKNnuWfexdv7wz94qpKCix7pqaw7kW7DcjBrvTI6XbSBOfHRCveky4++AE7c3goZAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "openclaw-dev-network/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefNetworkVpcprivateegressSubnet1SubnetF93B96A6F4A16B42": {
   "Value": {
    "Ref": "NetworkVpcprivateegressSubnet1SubnetF93B96A6"
   },
   "Export": {
    "Name": "openclaw-dev-network:ExportsOutputRefNetworkVpcprivateegressSubnet1SubnetF93B96A6F4A16B42"
   }
  },
  "ExportsOutputRefNetworkVpcprivateegressSubnet2SubnetD8577098012BD3CB": {
   "Value": {
    "Ref": "NetworkVpcprivateegressSubnet2SubnetD8577098"
   },
   "Export": {
    "Name": "openclaw-dev-network:ExportsOutputRefNetworkVpcprivateegressSubnet2SubnetD8577098012BD3CB"
   }
  },
  "ExportsOutputFnGetAttNetworkServiceSecurityGroup61AA808EGroupIdDE17A2EB": {
   "Value": {
    "Fn::GetAtt": [
     "NetworkServiceSecurityGroup61AA808E",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "openclaw-dev-network:ExportsOutputFnGetAttNetworkServiceSecurityGroup61AA808EGroupIdDE17A2EB"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
